--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ description = "Accelerated machine learning in Rust."
 tch = "0.5.0"
 egg = "0.6.0"
 spaces = "5.0.0"
+priority-queue = "0.5.2"
+sexp = "1.1.4"
